--- a/contracts/x-oracle-passthrough/Cargo.toml
+++ b/contracts/x-oracle-passthrough/Cargo.toml
@@ -23,4 +23,4 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 cosmwasm-std = { version="2.1.3", features = ["cosmwasm_2_0" ] }
 schemars = "0.8.21"
 serde = { version = "1.0.207", default-features = false, features = ["derive"] }
-connect-sdk = { path = "../../packages/connect-sdk" }
+connect-sdk = { path = "../../packages/connect-sdk", features = ["stargate"]}
