--- a/contracts/x-oracle-passthrough/Cargo.toml
+++ b/contracts/x-oracle-passthrough/Cargo.toml
@@ -20,7 +20,7 @@ optimize = """docker run --rm -v "$(pwd)":/code \
   cosmwasm/rust-optimizer:0.16.0
 """
 [dependencies]
-cosmwasm-std = { version="2.1.3", features = ["cosmwasm_2_0" ] }
+cosmwasm-std = { version="2.1.3", features = [ ] }
 schemars = "0.8.21"
 serde = { version = "1.0.207", default-features = false, features = ["derive"] }
 connect-sdk = { path = "../../packages/connect-sdk", features = []}
