--- a/packages/connect-sdk/Cargo.toml
+++ b/packages/connect-sdk/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/skip-mev/connect-sdk"
 homepage = "https://skip.build"
 
 [dependencies]
-cosmwasm-std = { version="2.1.3", features = ["cosmwasm_2_0" ] }
+cosmwasm-std = { version="2.1.3", features = [ ] }
 serde = { version = "1.0.207", default-features = false, features = ["derive"] }
 schemars = "0.8.21"
 serde-cw-value = "0.7.0"
